tests/miz/fail/soundness/fail_soundness_assume_false_001.miz
theorem
  contradiction implies 1 = 0;
proof
end;
